@@ -19,6 +19,7 @@ WC3 = WooCommerce 3 (WordPress)
 
 5.5.0 (2018-10-??)
 ------------------
+- ALL: Support for new roles and permissions to access the api.
 - ALL: Add logging to execution stage of batch form.
 - ALL: Warning: implode(): Invalid arguments passed in Completor.php on line 835.
 - ALL: Make not found property specification a debug level message.
